# bow

./: ChangeLog  HACKING  INSTALL  Makefile.in  NEWS  README  README.md  TODO  Version  active.c  annotation.c  archer-server.c  archer.c  archer_query.c  archer_query.lex  archer_query.y  archer_query_array.c  archer_query_execute.c  archer_query_index.c  archer_query_table.c  array.c  arrow.c  barrel.c  bitvec.c  bmalloc.c  configure  configure.in  crossbow.c  deflexer.c  defparser.c  dirichlet.c  dirk.c  docnames.c  dv.c  em.c  email.c  emsimple.c  error.c  evi.c  flex_mail.lex  (+66 more)
argp/: ChangeLog  argp-fs-xinl.c  argp-xinl.c  argp.h
bow/: archer.h  archer_query.h  archer_query_array.h  archer_query_execute.h  archer_query_index.h  archer_query_table.h  crossbow.h  em.h  hdb.h  kl.h  knn.h  libbow.h  naivebayes.h  prind.h  svm.h  tfidf.h
